# gpc4_ss21

./: .gitignore  .gitmodules  README.md
arc/: CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  arc.cbp  build.sh  configure.sh  rebuild.sh
arc/tessla_cuda/: CMakeLists.txt  check_your_gpu
arc/tessla_cuda/src/: CMakeLists.txt  GPUReader.cu  GPUReader.cuh  GPUStream.cu  GPUStream.cuh  GPUWriter.cu  GPUWriter.cuh  ImmediateFunctions.cpp  ImmediateFunctions.cu  ImmediateFunctions.cuh  ImmediateFunctions.h  ImmediateFunctionsThrust.cu  ImmediateFunctionsThrust.cuh  Reader.cu  Reader.cuh  Stream.cu  Stream.cuh  StreamFunctionHelper.cu  StreamFunctionHelper.cuh  StreamFunctions.cu  StreamFunctions.cuh  StreamFunctionsThrust.cu  StreamFunctionsThrust.cuh  helper.cuh  main.cu
arc/tessla_cuda/test/: CMakeLists.txt  test_benchmark.cpp  test_benchmark_thrust.cpp  test_cuda.cpp  test_delay.cpp  test_last.cpp  test_slift.cpp  test_time.cpp
arc/tessla_seq/benchmark/: CMakeLists.txt  reader_benchmark.cpp
arc/tessla_seq/src/: CMakeLists.txt  Event.cpp  Reader.cpp  Reader.h  Stream.cpp  Stream.h  StreamFunctions.cpp  StreamFunctions.h  Writer.cpp  Writer.h
arc/tessla_seq/test/: CMakeLists.txt  test_benchmark_seq.cpp  test_main.cpp  test_test.cpp
arc/test/: input-generator.py  last_benchmarking.tessla
arc/test/data/: benchmarkin4_delay.out  benchmarking1.in  benchmarking1_count.out  benchmarking1_last.out  benchmarking1_lift.in  benchmarking1_slift_add.out  benchmarking1_slift_div.out  benchmarking1_slift_merge.out  benchmarking1_slift_multiply.out  benchmarking1_slift_subtract.out  benchmarking1_time.out  benchmarking2.in  benchmarking2_count.out  benchmarking2_last.out  benchmarking2_lift.in  benchmarking2_slift_add.out  benchmarking2_slift_merge.out  benchmarking2_slift_multiply.out  benchmarking2_slift_subtract.out  benchmarking2_time.out  benchmarking3.in  benchmarking3_count.out  benchmarking3_delay.out  benchmarking3_last.out  benchmarking3_lift.in  benchmarking3_slift_add.out  benchmarking3_slift_merge.out  benchmarking3_slift_multiply.out  benchmarking3_slift_subtract.out  benchmarking3_time.out  benchmarking4.in  benchmarking4_count.out  benchmarking4_delay.out  benchmarking4_last.out  benchmarking4_lift.in  benchmarking4_slift_add.out  benchmarking4_slift_merge.out  benchmarking4_slift_multiply.out  benchmarking4_slift_subtract.out  benchmarking4_time.out  (+62 more)
arc/vm/: ir.md
arc/vm/src/: CMakeLists.txt  DebugScheduler.cpp  DebugScheduler.h  Decode.cpp  Decode.h  GPUScheduler.cpp  GPUScheduler.h  IOStream.h  IOStrem.h  InstrInterface.cpp  InstrInterface.h  Scheduler.cpp  Scheduler.h  SequentialScheduler.cpp  SequentialScheduler.h  ThrustScheduler.cpp  ThrustScheduler.h  lfqueue.h  main.cpp  main.h  runner.cpp  runner.h
arc/vm/test/: CMakeLists.txt  basictest.coil  correct_all.coil  correct_double.coil  double_spec.coil  missing_del_unknown_field.coil  test_vm.cpp  unknown_field_correct.coil
arc/vm/test/arc_input/: default.coil  test_1337_sl10_tl100.coil  test_1337_sl10_tl100.in  test_lel_sl100_tl2500.coil  test_peda_sl200_tl250_benchmark.coil  test_peda_sl200_tl250_benchmark.in
benchmark/: fulltest.py  spec_gen.py
benchmark/data/: arith.in  arith.tessla  basictest.in  test_1337_sl10_tl100.tessla  test_lel_sl100_tl2500.in  test_lel_sl100_tl25000.in  test_lel_sl100_tl25000.tessla  test_lel_sl10_tl2500.tessla
benchmark/fulltest/: fulltest.py  input_gen.py  spec_gen.py
benchmark/fulltest/data/: test_lel_sl100_tl2500.tessla  test_lel_sl10_tl2500.in
compiler/examples/: lexer.tessla  parser.tessla  staticcheck.tessla
compiler/src/lang/: ast.rs  lexer.rs  parser.rs  staticcheck.rs
plot/: delay_cuda.data  gpc4_plot.py  last_cuda.data  time_cuda.data  time_seq.data
tessla_cuda/: CMakeLists.txt  Makefile
tessla_cuda/profiler/: README.txt  profiler.nvvp
tessla_cuda/profiler/temp_profiler/.metadata/.plugins/org.eclipse.core.resources/: 0.snap
tessla_cuda/profiler/temp_profiler/.metadata/.plugins/org.eclipse.core.resources/.root/.indexes/: properties.index
tessla_cuda/profiler/temp_profiler/.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
tessla_cuda/profiler/temp_profiler/.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
tessla_cuda/profiler/temp_profiler/.metadata/.plugins/org.eclipse.rse.core/profiles/PRF.fabian-lenovo-y50-70_4128/: node.properties
tessla_cuda/profiler/temp_profiler/.metadata/.plugins/org.eclipse.rse.core/profiles/PRF.fabian-lenovo-y50-70_4128/FP.local.files_0/: node.properties
tessla_cuda/profiler/temp_profiler/.metadata/.plugins/org.eclipse.rse.core/profiles/PRF.fabian-lenovo-y50-70_4128/H.local_16/: node.properties
tessla_cuda/src/: Stream.cu  Stream.cuh  StreamFunctionHelper.cu  StreamFunctionHelper.cuh  StreamFunctions.cu  StreamFunctions.cuh  device_information.cuh  helper.cuh  main.cu  main.cuh
tessla_cuda/test/: test_cuda.cpp  test_main.cpp
tessla_seq/: makefile
tessla_seq/src/: Debug.cpp  Debug.h  Event.cpp  Event.h  Reader.cpp  Reader.h  Stream.cpp  Stream.h  StreamFunctions.cpp  StreamFunctions.h  Writer.cpp  Writer.h  main.cpp  main.h  stream_functions.cpp  stream_functions.h
tessla_seq/test/: run_test  test_test.cpp
tessla_seq/test/data/: bt_add1.out  bt_merge.out
test/: input-generator.py  tessla-output.py
test/data/: bt_delay.bigger.in  bt_delay.middle.in  bt_divs.out  bt_divs.tessla  bt_last.tessla  bt_merge.tessla  bt_modc.in  bt_modc.out  bt_modc.tessla  bt_mods.in  bt_mulc.out  bt_mulc.tessla  bt_subs.out  bt_subs.tessla  bt_time.in  bt_time.tessla  last_test2.out  last_test4.out  last_test4.tessla
vm/: ir.md  langspec.md  makefile
vm/src/: DebugScheduler.cpp  DebugScheduler.h  Decode.cpp  Decode.h  GPUScheduler.cpp  GPUScheduler.h  InstrInterface.cpp  InstrInterface.h  Scheduler.h  main.cpp  main.h
vm/test/: correct_all.coil  min_correct.coil  missing_del.coil  test_vm.cpp
winder/: Cargo.toml
winder/examples/: basictest.tessla  freetest.tessla
winder/src/: main.rs
winder/src/lang/: compiler.rs  mod.rs
