include_directories(${arc_SOURCE_DIR}/tessla_seq/src)
add_library(tessla_seq
        Debug.cpp
        Event.cpp
        Reader.cpp
        Stream.cpp
        StreamFunctions.cpp
        Writer.cpp
)

add_executable(tessla_seq_test
        Debug.cpp
        Event.cpp
        Reader.cpp
        Stream.cpp
        StreamFunctions.cpp
        Writer.cpp
        ../test/test_main.cpp
        ../test/test_test.cpp
)